# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./policies";
 export * from "./rules";
 export * from "./users";
 export * from "./user_org_roles";
+export * from "./decisions";
